Tasks #2907 and #2869: - New adapter for File Storage Activity - Revamping of FileStorageActivity

--- a/res/layout/activity_filestorage.xml
+++ b/res/layout/activity_filestorage.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".FileStorageActivity" >
+    tools:context=".FileStorageActivityLollipop" >
     
     <RelativeLayout
         android:id="@+id/file_storage_toolbar"
