--- a/res/layout-v21/activity_login.xml
+++ b/res/layout-v21/activity_login.xml
@@ -53,7 +53,7 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
+                android:layout_gravity="center"
                 android:orientation="horizontal" >
 
                 <ImageView
