(Corrected bugs) Tasks #2928 and #2929: - Revamping of Transfers Section - New adapter for Transfer Section

--- a/res/layout-v21/item_transfers_list.xml
+++ b/res/layout-v21/item_transfers_list.xml
@@ -85,7 +85,7 @@
         android:id="@+id/transfers_list_option_remove"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_delete"
+        android:src="@drawable/ic_clear_black"
 		android:background="@null" 
         android:layout_alignTop="@id/transfers_list_filename"
         android:layout_alignParentRight="true"
