--- a/res/layout-v21/cell_photosync_grid_fill.xml
+++ b/res/layout-v21/cell_photosync_grid_fill.xml
@@ -1,6 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/cell_photosync_grid_item_complete_layout"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="7dp"
     android:background="@color/grid_background">
@@ -46,7 +46,7 @@
 	
     <RelativeLayout
     	android:id="@+id/cell_photosync_item_layout_empty"
-    	android:layout_width="fill_parent"
+    	android:layout_width="match_parent"
     	android:layout_height="wrap_content"
     	android:background="@color/grid_background">
 	</RelativeLayout>
