--- a/res/menu/activity_manager.xml
+++ b/res/menu/activity_manager.xml
@@ -8,6 +8,14 @@
 		android:icon="@drawable/ic_menu_search"
 		MEGA:actionViewClass="android.support.v7.widget.SearchView"
 		MEGA:showAsAction="ifRoom|collapseActionView" /> 
+		
+     <item
+		android:id="@+id/action_grid_view_large_small"
+		android:orderInCategory="100"
+		android:title="@string/action_grid"
+		android:icon="@drawable/ic_menu_gridview"
+		MEGA:showAsAction="always"
+		android:visible="false" /> 
 
 
 <!--     <item 
