--- a/res/menu/activity_manager.xml
+++ b/res/menu/activity_manager.xml
@@ -16,7 +16,22 @@
 		android:icon="@drawable/ic_menu_gridview"
 		MEGA:showAsAction="always"
 		android:visible="false" /> 
-
+     
+     <item
+		android:id="@+id/action_play"
+		android:orderInCategory="100"
+		android:title="@string/action_play"
+		android:icon="@drawable/ic_play_arrow_white"
+		MEGA:showAsAction="ifRoom" 
+		android:visible="false"/> 
+		
+      <item
+		android:id="@+id/action_pause"
+		android:orderInCategory="100"
+		android:title="@string/action_pause"
+		android:icon="@drawable/ic_pause_white"
+		MEGA:showAsAction="ifRoom" 
+		android:visible="false" /> 
 
 <!--     <item 
         android:id="@+id/action_search"
@@ -49,7 +64,8 @@
 	    android:showAsAction="never"
 	    android:title="@string/menu_pause_transfers"
 	    android:icon="@drawable/ic_action_bar_null"
-	    MEGA:showAsAction="never" />
+	    MEGA:showAsAction="never"
+	    android:visible="false" />
 	 
 	<item
 	    android:id="@+id/action_take_picture"
@@ -211,6 +227,14 @@
 	    android:orderInCategory="160"
 	    android:showAsAction="never"
 	    android:title="@string/action_kill_all_sessions"
+	    android:icon="@drawable/ic_action_bar_null"
+	    MEGA:showAsAction="never" />	
+	    
+	<item
+	    android:id="@+id/action_menu_cancel_all_transfers"
+	    android:orderInCategory="165"
+	    android:showAsAction="never"
+	    android:title="@string/action_cancel_subscriptions"
 	    android:icon="@drawable/ic_action_bar_null"
 	    MEGA:showAsAction="never" />	
 </menu>
