--- a/res/layout-v21/item_photo_sync_list.xml
+++ b/res/layout-v21/item_photo_sync_list.xml
@@ -172,18 +172,19 @@
 	    android:layout_height="wrap_content"
 	    android:descendantFocusability="blocksDescendants"
 	    android:id="@+id/photo_sync_list_month_layout" 
-	    android:background="@color/photo_sync_month_layout" >
+	    android:background="@color/photo_sync_month_layout" 
+	    android:layout_marginLeft="72dp">
 	    
     	<TextView
 	        android:id="@+id/photo_sync_list_month_name"
-	        android:layout_width="225dp"
-	        android:layout_height="30dp"
-	        android:layout_marginLeft="10dp"
-	        android:layout_marginTop="4dp"
-	        android:layout_marginBottom="4dp"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
 	        android:singleLine="false" 
-	        android:textColor="@color/white"
-	        android:textSize="18sp"/>
+	        android:textColor="@color/photo_sync_month_text"
+	        android:textSize="14sp"
+	        android:textStyle="bold"
+	        android:layout_marginTop="4dp"
+	        android:layout_marginBottom="4dp" />
     
 	</RelativeLayout>	
     
