--- a/res/values-v21/styles.xml
+++ b/res/values-v21/styles.xml
@@ -28,6 +28,35 @@
         
     </style>
     
+    <style name="Theme.Megaactionbar.FullScreen" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+ 
+        <!-- colorPrimary is used for the default action bar background -->
+        <item name="colorPrimary">@color/lollipop_primary_color</item>
+ 
+        <!-- colorPrimaryDark is used for the status bar -->
+        <item name="colorPrimaryDark">@color/lollipop_dark_primary_color</item>
+ 
+        <!-- colorAccent is used as the default value for colorControlActivated
+             which is used to tint widgets -->
+        <item name="colorAccent">@color/accentColor</item>
+        <item name="colorControlNormal">@color/text_secondary</item>
+        
+        <item name="android:windowFullscreen">true</item>
+        
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+    	<item name="android:statusBarColor">@android:color/transparent</item>
+    	<item name="android:windowTranslucentStatus">true</item>
+    	
+    	<item name="windowActionModeOverlay">true</item>
+    	<item name="actionModeBackground">@color/lollipop_primary_color</item>
+		<item name="actionBarPopupTheme">@style/ThemeOverlay.AppCompat.Light</item>
+ 
+        <!-- You can also set colorControlNormal, colorControlActivated
+             colorControlHighlight & colorSwitchThumbNormal. -->
+        
+    </style>
+    
     <style name="Theme.Megaactionbar.Properties" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. -->
  
