--- a/res/layout/activity_pin_lock.xml
+++ b/res/layout/activity_pin_lock.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_secondary"
-    tools:context=".PinLockActivity" >
+    tools:context=".PinLockActivityLollipop" >
 
     <LinearLayout
         android:layout_width="match_parent"
