--- a/res/layout-v21/item_file_grid.xml
+++ b/res/layout-v21/item_file_grid.xml
@@ -11,14 +11,14 @@
         android:background="@drawable/background_item_grid"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="5dp"
+        android:layout_margin="3dp"
         android:descendantFocusability="blocksDescendants" >
         
         <ImageView
 	        android:id="@+id/file_grid_thumbnail"
-	        android:layout_width="157dp"
-	        android:layout_height="157dp"
+	        android:layout_width="172dp"
+	        android:layout_height="172dp"
+	        android:layout_margin="5dp"
 	        android:layout_centerHorizontal="true"
 	        android:scaleType="fitCenter"
 	        android:background="@null" />
@@ -34,26 +34,6 @@
 	        android:layout_below="@id/file_grid_thumbnail"
 	 		 />
         
-        <TextView
-	        android:id="@+id/file_grid_filename"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"	
-	        android:paddingLeft="6dp"
-	        android:paddingTop="3dp"
-	        android:layout_below="@id/file_grid_separator" />
-        
-              
-        
-        <TextView
-	        android:id="@+id/file_grid_filesize"
-	        android:layout_width="wrap_content"
-	        android:layout_height="30dp"
-	        android:paddingLeft="6dp"
-	        android:paddingBottom="7dp"
-	        android:textColor="@color/file_list_second_row"
-	        android:layout_below="@id/file_grid_filename"
-	        android:textSize="12sp" />
-        
         <ImageButton 
 	        android:id="@+id/file_grid_three_dots"
 	        android:layout_width="wrap_content"
@@ -66,7 +46,29 @@
 	        android:paddingBottom="8dp"
 	        android:layout_gravity="right"
 	        android:layout_alignParentRight="true" 
-	        android:layout_alignParentBottom="true"/>        
+	        android:layout_alignParentBottom="true"/> 
+        
+        <TextView
+	        android:id="@+id/file_grid_filename"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"	
+	        android:paddingLeft="6dp"
+	        android:paddingTop="3dp"
+	        android:layout_toLeftOf="@id/file_grid_three_dots"
+	        android:layout_alignParentLeft="true"
+	        android:layout_below="@id/file_grid_separator"
+	        android:ellipsize="end"
+        	android:maxLines="2" />              
+        
+        <TextView
+	        android:id="@+id/file_grid_filesize"
+	        android:layout_width="wrap_content"
+	        android:layout_height="30dp"
+	        android:paddingLeft="6dp"
+	        android:paddingBottom="7dp"
+	        android:textColor="@color/file_list_second_row"
+	        android:layout_below="@id/file_grid_filename"
+	        android:textSize="12sp" />       
         
        <ProgressBar
 	    android:id="@+id/transfers_grid_browser_bar"
@@ -78,17 +80,6 @@
 		android:layout_margin="5dip" 
         android:layout_toLeftOf="@id/file_grid_three_dots"
         android:layout_below="@id/file_grid_filename" /> 
-         <!--
-        <ImageView
-	        android:id="@+id/file_grid_arrow_selection1"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:src="@drawable/arrow_selection_white_background"
-	        android:layout_below="@id/file_grid_three_dots1"
-			android:layout_alignParentBottom="true"
-			android:layout_alignParentRight="true"
-			android:paddingRight="14dp" />
-               -->
     </RelativeLayout>
 <!--    
     <RelativeLayout
