--- a/res/xml-v21/preferences.xml
+++ b/res/xml-v21/preferences.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/white">
+    
      <nz.mega.components.MEGAPreferenceCategory 
         android:key="settings_pin_lock"
         android:title="@string/settings_pin_lock">
