--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="background">#ffffff</color>
     <color name="background_secondary">#eeeeee</color>
     <color name="mega">#db0605</color>
+    <color name="mega_transparency">#CCdb0605</color>
     <color name="mega_text">#d90007</color>
     <color name="text_login">#333333</color>
     <color name="used_space_ok">#1fa4e7</color>
