--- a/res/layout-v21/fragment_contactsgrid.xml
+++ b/res/layout-v21/fragment_contactsgrid.xml
@@ -6,7 +6,7 @@
     tools:context=".FileBrowserListFragment" >
 
     <ImageView
-        android:id="@+id/contact_list_empty_image"
+        android:id="@+id/contact_grid_empty_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -14,17 +14,17 @@
         android:gravity="center_horizontal" />
 
     <TextView
-        android:id="@+id/contact_list_empty_text"
+        android:id="@+id/contact_grid_empty_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/contact_list_empty_image"
+        android:layout_below="@id/contact_grid_empty_image"
         android:layout_centerHorizontal="true"
         android:gravity="center_horizontal"
         android:textColor="@color/text_secondary"
         android:textSize="16sp" />
 
     <LinearLayout
-        android:id="@+id/out_space_contacts"
+        android:id="@+id/out_space_contacts_grid"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -33,7 +33,7 @@
         android:orientation="vertical" >
 
         <TextView
-            android:id="@+id/out_space_text_contacts"
+            android:id="@+id/out_space_text_contacts_grid"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@color/navigation_drawer_background"
@@ -48,7 +48,7 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/out_space_btn_contacts"
+            android:id="@+id/out_space_btn_contacts_grid"
             android:layout_width="fill_parent"
             android:layout_height="48dp"
             android:background="@drawable/btn_default_holo_light_without_corners"
@@ -56,14 +56,15 @@
             android:textColor="@color/button_text" />
     </LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/contacts_list_view"
+    <nz.mega.components.AutofitRecyclerView
+        android:id="@+id/contacts_grid_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:choiceMode="multipleChoice" />
+        android:layout_height="match_parent" 
+        android:choiceMode="multipleChoice"
+        android:columnWidth="172dp"/>
     
     <ImageButton
-        android:id="@+id/invite_contact_button"
+        android:id="@+id/invite_contact_button_grid"
         android:layout_width="@dimen/fab_button_diameter"
         android:layout_height="@dimen/fab_button_diameter"
         android:layout_alignParentBottom="true"
@@ -78,7 +79,7 @@
 
     <nz.mega.components.SlidingUpPanelLayout
         xmlns:sothree="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/sliding_layout_contacts_list"
+        android:id="@+id/sliding_layout_contacts_grid"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="bottom"
@@ -91,7 +92,7 @@
         <!-- MAIN CONTENT -->
 
         <FrameLayout
-            android:id="@+id/contact_list_out_options"
+            android:id="@+id/contact_grid_out_options"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clickable="true"
@@ -110,7 +111,7 @@
         <!-- SLIDING LAYOUT -->
 
         <LinearLayout
-            android:id="@+id/contact_list_options"
+            android:id="@+id/contact_grid_options"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
@@ -118,14 +119,14 @@
             android:padding="0dp" >
 
             <LinearLayout
-                android:id="@+id/contact_list_option_properties_layout"
+                android:id="@+id/contact_grid_option_properties_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:orientation="horizontal" >
 
                 <ImageView
-                    android:id="@+id/contact_list_option_properties"
+                    android:id="@+id/contact_grid_option_properties"
                     style="@style/dialogActionButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -134,7 +135,7 @@
                     android:src="@drawable/info_ic" />
 
                 <TextView
-                    android:id="@+id/contact_list_option_properties_text"
+                    android:id="@+id/contact_grid_option_properties_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingBottom="2dp"
@@ -146,14 +147,14 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/contact_list_option_send_file_layout"
+                android:id="@+id/contact_grid_option_send_file_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:orientation="horizontal" >
 
                 <ImageView
-                    android:id="@+id/contact_list_option_send_file"
+                    android:id="@+id/contact_grid_option_send_file"
                     style="@style/dialogActionButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -162,7 +163,7 @@
                     android:src="@drawable/send_file_ic" />
 
                 <TextView
-                    android:id="@+id/contacts_list_option_send_file_text"
+                    android:id="@+id/contacts_grid_option_send_file_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingBottom="2dp"
@@ -174,14 +175,14 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/contact_list_option_share_layout"
+                android:id="@+id/contact_grid_option_share_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:orientation="horizontal" >
 
                 <ImageView
-                    android:id="@+id/contact_list_option_share"
+                    android:id="@+id/contact_grid_option_share"
                     style="@style/dialogActionButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -190,7 +191,7 @@
                     android:src="@drawable/ic_share" />
 
                 <TextView
-                    android:id="@+id/contact_list_option_share_text"
+                    android:id="@+id/contact_grid_option_share_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingBottom="2dp"
@@ -202,14 +203,14 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/contact_list_option_remove_layout"
+                android:id="@+id/contact_grid_option_remove_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:orientation="horizontal" >
 
                 <ImageView
-                    android:id="@+id/contact_list_option_remove"
+                    android:id="@+id/contact_grid_option_remove"
                     style="@style/dialogActionButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -218,7 +219,7 @@
                     android:src="@drawable/ic_delete" />
 
                 <TextView
-                    android:id="@+id/contacts_list_option_remove_text"
+                    android:id="@+id/contacts_grid_option_remove_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingBottom="2dp"
