--- a/res/layout-v21/fragment_contact_file_list.xml
+++ b/res/layout-v21/fragment_contact_file_list.xml
@@ -91,18 +91,18 @@
             android:textColor="@color/text_secondary"
             android:textSize="16sp" />
     </RelativeLayout>
-
+        
     <nz.mega.components.SlidingUpPanelLayout
         xmlns:sothree="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/sliding_layout"
+        android:id="@+id/sliding_layout_contact_file"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="bottom"
-        sothree:umanoDragView="@+id/dragView"
-        sothree:umanoOverlay="true"
         sothree:umanoPanelHeight="100dp"
+        sothree:umanoShadowHeight="4dp"
         sothree:umanoParalaxOffset="100dp"
-        sothree:umanoShadowHeight="4dp" >
+        sothree:umanoDragView="@+id/dragView"
+        sothree:umanoOverlay="true">
 
         <!-- MAIN CONTENT -->
 
