Tasks #3085 and #3086: -Update three dots action button in list fragments -Improving behavior of the Fab Button

--- a/res/layout-v21/contacts_sent_requests_tab.xml
+++ b/res/layout-v21/contacts_sent_requests_tab.xml
@@ -38,7 +38,7 @@
         android:background="@drawable/ripple"
         android:elevation="@dimen/elevation_low"
         android:stateListAnimator="@anim/button_elevation"
-        android:text="+"
+        android:src="@drawable/ic_add_white"
         android:tint="@android:color/white" />
 
     <mega.privacy.android.app.components.SlidingUpPanelLayout
