--- a/res/layout-v21/item_file_list.xml
+++ b/res/layout-v21/item_file_list.xml
@@ -71,12 +71,10 @@
         android:id="@+id/file_list_three_dots"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/action_selector_ic"
+        android:src="@drawable/ic_dots_vertical_grey"
 		android:background="@null" 
-        android:layout_alignTop="@id/file_list_filename"
         android:layout_alignParentRight="true"
-		android:paddingTop="12dp"
-        android:paddingRight="15dp" />
+		android:layout_centerVertical="true" />
     
     <ImageView
         android:id="@+id/file_list_public_link"
@@ -84,7 +82,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_public_link_list"
 		android:background="@null" 
-        android:layout_marginTop="15dp"
+        android:layout_centerVertical="true"
         android:layout_toLeftOf="@id/file_list_three_dots"/> 
         
     <ImageView
