--- a/res/layout-v21/fragment_filebrowserlist.xml
+++ b/res/layout-v21/fragment_filebrowserlist.xml
@@ -33,34 +33,6 @@
 	    android:layout_below="@id/file_list_empty_image"
 	    android:layout_marginTop="@dimen/standard_margin"
 	    android:layout_centerHorizontal="true"/>  
-    
-    
-     <LinearLayout
-         android:id="@+id/buttons_layout"
-    	 android:layout_width="fill_parent"
-    	 android:layout_height="wrap_content"
-    	 android:layout_alignParentBottom="true"
-    	 android:layout_gravity="center|fill_horizontal"
-    	 android:orientation="horizontal">
-
-         <Button
-             android:id="@+id/btnLeft_new"
-             android:layout_width="fill_parent"
-       		android:layout_height="48dp"
-       		android:layout_weight="1"
-             android:background="@drawable/grey_btn_default_holo_light"
-             android:textColor="@color/button_text"
-             android:text="@string/menu_new_folder" />
-         
-         <Button
-             android:id="@+id/btnRight_upload"
-             android:layout_width="fill_parent"
-       		android:layout_height="48dp"
-       		android:layout_weight="1"
-             android:background="@drawable/btn_default_holo_light_without_corners"
-             android:textColor="@color/button_text"
-             android:text="@string/general_upload" />
-      </LinearLayout>    
       
       <LinearLayout
          android:id="@+id/out_space"
@@ -166,7 +138,7 @@
         android:layout_marginBottom="@dimen/fab_button_margin_bottom"
         android:layout_marginRight="@dimen/fab_button_margin_right"
         android:background="@drawable/ripple"
-        android:text="+"
+        android:src="@drawable/ic_add_white"
         android:tint="@android:color/white"
         android:elevation="@dimen/elevation_low"
         android:stateListAnimator="@anim/button_elevation"/>
