--- a/res/layout-v21/item_contact_incom_request_list.xml
+++ b/res/layout-v21/item_contact_incom_request_list.xml
@@ -54,13 +54,10 @@
         android:id="@+id/contact_request_list_three_dots"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/action_selector_ic"
+        android:src="@drawable/ic_dots_vertical_grey"
 		android:background="@null" 
-        android:layout_alignTop="@id/contact_request_list_name"
-        android:layout_alignParentRight="true"
-		android:paddingTop="12dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="15dp" />
+		android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"/>
     
 </RelativeLayout>
 
