--- a/res/layout/select_dialog_singlechoice.xml
+++ b/res/layout/select_dialog_singlechoice.xml
@@ -2,11 +2,10 @@
     android:id="@android:id/text1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:checkMark="@drawable/btn_radio_holo_light"
+    android:checkMark="?android:attr/listChoiceIndicatorSingle"
     android:ellipsize="marquee"
     android:gravity="center_vertical"
-    android:paddingEnd="16dip"
-    android:paddingStart="16dip"
+    android:paddingStart="25dip"
+    android:paddingEnd="15dip"
     android:textAppearance="?android:attr/textAppearanceMedium"
-    android:padding="15dp"
     android:textSize="18sp"/>
