Task #3104 - Update three dots action button in GRID fragments

--- a/res/layout-v21/fragment_offlinegrid.xml
+++ b/res/layout-v21/fragment_offlinegrid.xml
@@ -54,6 +54,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" 
         android:choiceMode="multipleChoice"
+        android:layout_below="@id/offline_content_text_grid"
         android:columnWidth="172dp"/>
     
     <ImageView
