--- a/res/layout-v21/item_offline_grid.xml
+++ b/res/layout-v21/item_offline_grid.xml
@@ -34,37 +34,42 @@
 	        android:layout_below="@id/offline_grid_thumbnail"
 	 		 />
         
+        <ImageButton 
+	        android:id="@+id/offline_grid_three_dots"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:src="@drawable/ic_dots_vertical_grey"
+			android:background="@null" 
+			android:layout_marginLeft="2dp"
+			android:layout_marginTop="22dp"
+			android:layout_marginRight="8dp"
+	        android:layout_below="@id/offline_grid_separator"
+	        android:layout_alignParentRight="true" />  
+	        
         <TextView
 	        android:id="@+id/offline_grid_filename"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"	
-	        android:paddingLeft="6dp"
-	        android:paddingTop="3dp"
-	        android:layout_below="@id/offline_grid_separator" />
+	        android:layout_alignParentLeft="true"	
+	        android:layout_marginLeft="12dp"
+	        android:layout_marginTop="15dp"
+	        android:layout_toLeftOf="@id/offline_grid_three_dots"
+	        android:layout_below="@id/offline_grid_separator"
+	        android:textColor="@color/black"
+	        android:ellipsize="end"
+        	android:maxLines="1" />
         
         <TextView
 	        android:id="@+id/offline_grid_filesize"
 	        android:layout_width="wrap_content"
 	        android:layout_height="30dp"
-	        android:paddingLeft="6dp"
-	        android:paddingBottom="7dp"
+	        android:layout_alignParentLeft="true"	
+	        android:layout_marginLeft="12dp"
+	        android:layout_marginBottom="7dp"
 	        android:textColor="@color/file_list_second_row"
 	        android:layout_below="@id/offline_grid_filename"
-	        android:textSize="12sp" />
-        
-        <ImageButton 
-	        android:id="@+id/offline_grid_three_dots"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:src="@drawable/action_selector_ic"
-			android:background="@null" 
-			android:paddingTop="10dp"
-	        android:paddingLeft="2dp"
-	        android:paddingRight="10dp"
-	        android:paddingBottom="8dp"
-	        android:layout_gravity="right"
-	        android:layout_alignParentRight="true" 
-	        android:layout_alignParentBottom="true"/>            
+	        android:textSize="12sp" />       
+          
     </RelativeLayout>
     
 </RelativeLayout>
